--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,11 +24,8 @@ jobs:
       run: |
         npm install # or yarn install
 
-    - name: Set up PHP
-      uses: shivammathur/setup-php@v2
-      with:
-        php-version: '8.1' # Specify the PHP version you want to use
-        extensions: composer
+    - name: install Composer Packages
+      uses: php-actions/composer@v6
 
     - name: Install Composer packages
       run: |
