added PH Movies

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,12 @@
 /assets/bootstrap
 /assets/boxicons
 popcorn-n-movies.zip
+/conn
+assets/styles/css/bootstrap-grid.css
+assets/styles/css/bootstrap-grid.css.map
+assets/styles/css/bootstrap-reboot.css
+assets/styles/css/bootstrap-reboot.css.map
+assets/styles/css/bootstrap-utilities.css
+assets/styles/css/bootstrap-utilities.css.map
+assets/styles/css/bootstrap.css
+assets/styles/css/bootstrap.css.map
